--- a/index.html
+++ b/index.html
@@ -22,9 +22,54 @@
   </style>
 
   <meta charset="UTF-8" />
-  <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+  <link rel="icon" type="image/svg+xml" href="/learnspire-favicon.jpg" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>LearnSpire Educational Platform</title>
+  <title>LearnSpire - Educational Platform</title>
+
+  <!-- Web App Manifest -->
+  <link rel="manifest" href="/manifest.json" />
+
+  <!-- SEO Meta Tags -->
+  <meta name="description" content="An innovative educational platform designed to inspire and empower learners of all ages.">
+  <meta name="keywords" content="learnspire.org, learnspire dehradun, learnspire india, education, learning, online courses, platform, learnspire, learners, teaching">
+  <meta name="author" content="LearnSpire">
+
+  <!-- Open Graph Meta Tags (for social media sharing) -->
+  <meta property="og:title" content="LearnSpire Educational Platform">
+  <meta property="og:description" content="An innovative educational platform designed to inspire and empower learners of all ages.">
+  <meta property="og:image" content="https://learnspire.org/learnspire-logo.jpg">
+  <meta property="og:url" content="https://learnspire.org">
+  <meta property="og:type" content="website">
+
+  <!-- Twitter Card Meta Tags -->
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:title" content="LearnSpire Educational Platform">
+  <meta name="twitter:description" content="An innovative educational platform designed to inspire and empower learners of all ages.">
+  <meta name="twitter:image" content="https://learnspire.org/learnspire-logo.jpg">
+
+  <!-- JSON-LD Structured Data for SEO -->
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "EducationalOrganization",
+    "name": "LearnSpire",
+    "url": "https://learnspire.org",
+    "logo": "https://learnspire.org/learnspire-logo.jpg",
+    "description": "An innovative educational platform designed to inspire and empower learners of all ages with a wide range of courses.",
+    "address": {
+      "@type": "PostalAddress",
+      "addressLocality": "Dehradun",
+      "addressRegion": "UK",
+      "addressCountry": "IN"
+    },
+    "contactPoint": {
+      "@type": "ContactPoint",
+      "contactType": "customer support",
+      "email": "info@learnspire.org"
+    }
+  }
+  </script>
+
   <script src="https://cdn.tailwindcss.com"></script>
   <script>
     tailwind.config = {
