--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
   <meta name="author" content="LearnSpire">
 
   <!-- Open Graph Meta Tags (for social media sharing) -->
-  <meta property="og:title" content="LearnSpire Educational Platform">
+  <meta property="og:title" content="LearnSpire - Educational Platform">
   <meta property="og:description" content="An innovative educational platform designed to inspire and empower learners of all ages.">
   <meta property="og:image" content="https://learnspire.org/learnspire-logo.jpg">
   <meta property="og:url" content="https://learnspire.org">
