--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="icon" href="/learnspire-favicon-nobg.png" />
+  <link rel="icon" href="/favicon.ico" sizes="any" type="image/x-icon" />
   <title>LearnSpire: Online Courses for Professional & Academic Education</title>
   
   <!-- Web App Manifest -->
@@ -54,7 +54,7 @@
     "address": {
       "@type": "PostalAddress",
       "addressLocality": "Dehradun",
-      "addressRegion": "UK",
+      "addressRegion": "IN",
       "addressCountry": "IN"
     },
     "contactPoint": {
